--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -1,10 +1,5 @@
--for menu, submenus in menus
-  .menu.mn-index
-    %h2=tl("menus.#{menu}")
-    -for submenu, menuitems in submenus
-      -if (menuitems= menuitems.select{|url| authorized?(url)}).size > 0
-        .menu.indicator
-          %h3=tl("menus.submenus.#{submenu}")
-          %ul
-            -for menuitem in menuitems
-              =li_link_to(t("actions.#{menuitem[:controller]}.#{menuitem[:action]}"), menuitem)
+#main-menu
+  -for menu, submenus in menus
+    =link_to(last_page(menu), :class=>"big-button #{menu}", :title => tl("menus.#{menu}")) do
+      %span.icon
+      %span.text=tl("menus.#{menu}")
