--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
 
 %html{:xmlns=>"http://www.w3.org/1999/xhtml", :dir=>t("i18n.dir"), :lang=>t("i18n.iso2"), "xml:lang"=>t("i18n.iso2")}
   %head
-    %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
+    -#%link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
     =title_tag
     =csrf_meta_tags
     =stylesheet_link_tag :application
