--- a/app/views/layouts/_side.html.haml
+++ b/app/views/layouts/_side.html.haml
@@ -1,6 +1,7 @@
-=link_to("Retour", root_url, :class => "med-button back")
 -if request.url == root_url
   =link_to(SessionsController.human_action_name(:destroy), session_url, :method=>:delete, :class => "med-button logout")
+-else
+  =link_to("Retour", root_url, :class => "med-button back")
 
 -for submenu in menus[path[0]]||[]
   -#=side_module "menu.#{path[0]}.#{submenu[0]}", :title=>tl("menus.submenus.#{submenu[0]}"), :class=>(:current if path[1] == submenu[0]) do
