--- a/app/views/myselves/change_password.html.haml
+++ b/app/views/myselves/change_password.html.haml
@@ -3,9 +3,9 @@
     =formalize do |f|
       -f.error 'user'
       -f.title tc("insert_actual_password")
-      -f.field :user, :old_password, :null=>false
+      -f.field :user, :old_password, :required => true
       -f.title tc("insert_password")
-      -f.field :user, :password, :null=>false
-      -f.field :user, :password_confirmation, :null=>false
+      -f.field :user, :password, :required => true
+      -f.field :user, :password_confirmation, :required => true
     .end
   .actions=submit_tag tg(:apply)
