--- a/app/views/contacts/_coordinates_form.html.haml
+++ b/app/views/contacts/_coordinates_form.html.haml
@@ -1,17 +1,17 @@
-=formalize do |f|
-  -f.title :address
-  -f.field :contact, :line_2
-  -f.field :contact, :line_3
-  -f.field :contact, :line_4
-  -f.field :contact, :line_5
-  -f.field :contact, :line_6, "data-autocompletion"=>url_for(:action=>:autocomplete_for_area_name, :controller=>:interfacers)
-  -f.field :contact, :country, :choices=>countries, :options=>{:include_blank=>true}
-  -f.title :canals
-  -f.field :contact, :phone
-  -f.field :contact, :fax
-  -f.field :contact, :mobile
-  -f.field :contact, :email   
-  -f.field :contact, :website
+=field_set(@contact, :address) do |f|
+  =f.input :line_2
+  =f.input :line_3
+  =f.input :line_4
+  =f.input :line_5
+  =f.input :line_6, "data-autocompletion"=>url_for(:action=>:autocomplete_for_area_name, :controller=>:interfacers)
+  =f.input :country, :collection => countries
+
+=field_set(@contact, :canals) do |f|
+  =f.input :phone
+  =f.input :fax
+  =f.input :mobile
+  =f.input :email   
+  =f.input :website
 
 
 
