--- a/app/views/layouts/_side.html.haml
+++ b/app/views/layouts/_side.html.haml
@@ -1,20 +1,25 @@
--if request.url == root_url
-  =link_to(SessionsController.human_action_name(:destroy), session_url, :method=>:delete, :class => "med-button logout")
--else
-  =link_to("Retour", root_url, :class => "med-button back")
+#help=render :partial=>"help/search", :object=>@article
+#side-content
+  -if request.url == root_url
+    =link_to(SessionsController.human_action_name(:destroy), session_url, :method=>:delete, :class => "med-button logout")
+  -else
+    =link_to("Retour", root_url, :class => "med-button back")
+  
+  -for submenu in menus[path[0]]||[]
+    -#=side_module "menu.#{path[0]}.#{submenu[0]}", :title=>tl("menus.submenus.#{submenu[0]}"), :class=>(:current if path[1] == submenu[0]) do
+      -for url in submenu[1]
+        .sd-item{:class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}")}=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url[:url])
+  
+    -name = "menu.#{path[0]}.#{submenu[0]}"
+    -unique = (submenu[1].size - 1).zero?
+    -session[:modules] ||= {}
+    -session[:modules][name.to_s] = true if ![TrueClass, FalseClass].include?(session[:modules][name.to_s].class) or unique
+    -shown = session[:modules][name]
+    -url = submenu[1][0]
+    =link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url[:url], :class => "med-button")
 
--for submenu in menus[path[0]]||[]
-  -#=side_module "menu.#{path[0]}.#{submenu[0]}", :title=>tl("menus.submenus.#{submenu[0]}"), :class=>(:current if path[1] == submenu[0]) do
-    -for url in submenu[1]
-      .sd-item{:class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}")}=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url[:url])
+#side-middle
 
-  -name = "menu.#{path[0]}.#{submenu[0]}"
-  -unique = (submenu[1].size - 1).zero?
-  -session[:modules] ||= {}
-  -session[:modules][name.to_s] = true if ![TrueClass, FalseClass].include?(session[:modules][name.to_s].class) or unique
-  -shown = session[:modules][name]
-  -url = submenu[1][0]
-  =link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url[:url], :class => "med-button")
-
-=link_to("Configuration", dashboard_url("settings"), :class => "med-button settings")
-=link_to("Aide", "#", :class => "med-button help", "data-toggle-visibility" => "#help")
+#side-footer
+  =link_to("Configuration", dashboard_url("settings"), :class => "med-button settings")
+  =link_to("Aide", "#", :class => "med-button help", "data-toggle-visibility" => "#help")
