--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,16 +13,12 @@
   -expiration = {}
   -expiration = {"timeout"=>session[:expiration], "timeout-href"=>renew_session_url(:name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
   %body{:data=>expiration, :class => "mod-"+reverse_menus[0].to_s}
-    #body.flex{:class=>("resizable" if resizable?)}
-      #wrap.wrap.hbox.flex
-        #help=render :partial=>"help/search", :object=>@article
-        %table#wrap-table
-          %tr
-            -if @current_user
-              %td#side.side{:style=>("display:none;" unless session[:side])}=side_tag
-              %td#side-splitter.splitter{:data=>{"toggle"=>toggle_side_url}} &nbsp;
-            %td#main.main.flex-9
-              =title_header_tag
-              =notifications_tag
-              =yield
+    #body.vbox.flex{:class=>("resizable" if resizable?)}
+      #wrap.hbox
+        -if @current_user
+          #side{:style=>("display:none;" unless session[:side])}=side_tag
+        #main
+          =title_header_tag
+          =notifications_tag
+          =yield
       #legals=legals_sentence
